example/kong/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: my-ingress
#   namespace: my-namespace
# spec:
#   ingressClassName: kong
#   rules:
#   - host: mywebsite.com
#     http:
#       paths:
#       - backend:
#           service:
#             name: my-service
#             port:
#               number: 80
#         path: /
#         pathType: Prefix
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: hypothesis
spec:
  ingressClassName: kong
  rules:
  - host: hypothesis-hlg
    http:
      paths:
      - backend:
          service:
            name: hypothesis
            port:
              number: 3000
        path: /
        pathType: Prefix
